--- a/05-Seaborn/01-Distribution-Plots.ipynb
+++ b/05-Seaborn/01-Distribution-Plots.ipynb
@@ -954,7 +954,7 @@
     }
    ],
    "source": [
-    "sns.kdeplot(data=sample_ages,x='age',bw_adjust=0.1)"
+    "sns.kdeplot(data=sample_ages,x='age',bw_adjust=0.01)"
    ]
   },
   {
@@ -1439,7 +1439,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1453,7 +1453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
