--- a/02-Numpy/00-NumPy-Arrays.ipynb
+++ b/02-Numpy/00-NumPy-Arrays.ipynb
@@ -714,35 +714,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "arr = np.arange(25)\n",
     "ranarr = np.random.randint(0,50,10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
-       "       17, 18, 19, 20, 21, 22, 23, 24])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr"
    ]
   },
   {
@@ -753,10 +730,31 @@
     {
      "data": {
       "text/plain": [
-       "array([38, 18, 22, 10, 10, 23, 35, 39, 23,  2])"
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "       17, 18, 19, 20, 21, 22, 23, 24])"
       ]
      },
      "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([36, 41, 27, 37,  5, 26,  5,  1, 15, 43])"
+      ]
+     },
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +786,7 @@
        "       [20, 21, 22, 23, 24]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,16 +806,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([38, 18, 22, 10, 10, 23, 35, 39, 23,  2])"
+       "array([36, 41, 27, 37,  5, 26,  5,  1, 15, 43])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,16 +826,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39"
+       "43"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +924,7 @@
        "(25,)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +946,7 @@
        "        16, 17, 18, 19, 20, 21, 22, 23, 24]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +967,7 @@
        "(1, 25)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,42 +978,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 0],\n",
-       "       [ 1],\n",
-       "       [ 2],\n",
-       "       [ 3],\n",
-       "       [ 4],\n",
-       "       [ 5],\n",
-       "       [ 6],\n",
-       "       [ 7],\n",
-       "       [ 8],\n",
-       "       [ 9],\n",
-       "       [10],\n",
-       "       [11],\n",
-       "       [12],\n",
-       "       [13],\n",
-       "       [14],\n",
-       "       [15],\n",
-       "       [16],\n",
-       "       [17],\n",
-       "       [18],\n",
-       "       [19],\n",
-       "       [20],\n",
-       "       [21],\n",
-       "       [22],\n",
-       "       [23],\n",
-       "       [24]])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'arr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43marr\u001b[49m\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m25\u001b[39m,\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'arr' is not defined"
+     ]
     }
    ],
    "source": [
